--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "login-page",
+  "name": "client",
+  "homepage": "https://Srishti-Goel.github.io/ToDoist",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -13,6 +16,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "gh-pages": "^6.3.0",
     "md5": "^2.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
